Add Page Lokasi

--- a/.htaccess
+++ b/.htaccess
@@ -5,7 +5,7 @@ RewriteEngine On
 RewriteRule ^beranda$ main.php?page=home [L]
 RewriteRule ^paket$ main.php?page=paket [L]
 RewriteRule ^kontak$ main.php?page=kontak [L]
-RewriteRule ^lokasi-(.*)$ main.php?page=lokasi&hal=$1 [L]
+RewriteRule ^lokasi$ main.php?page=lokasi [L]
 RewriteRule ^galeri-(.*)$ main.php?page=galeri&hal=$1 [L]
 RewriteRule ^testi-(.*)$ main.php?page=testi&hal=$1 [L]
 RewriteRule ^kendaraan$ main.php?page=kendaraan [L]
