--- a/.htaccess
+++ b/.htaccess
@@ -10,7 +10,9 @@ RewriteRule ^galeri-(.*)$ main.php?page=galeri&hal=$1 [L]
 RewriteRule ^testi-(.*)$ main.php?page=testi&hal=$1 [L]
 RewriteRule ^kendaraan$ main.php?page=kendaraan [L]
 RewriteRule ^hotel$ main.php?page=hotel [L]
-RewriteRule ^in$ views/login.php [L]
+RewriteRule ^in$ main.php?page=login [L]
+RewriteRule ^ins$ views/login.php [L]
+RewriteRule ^404$ error.html [L]
 
 RewriteRule ^mint$ mint.php?page=home [L]
 RewriteRule ^mint-cms$ mint.php?page=cms [L]
